<resources>
    <string name="app_name">ElectroCarrito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Catálogo</string>
    <string name="menu_product_detail">Detalle de Producto</string>
    <string name="menu_shopping">Carrito</string>
    <string name="menu_checkout">Chekout</string>
    <string name="menu_orders">Historial de pedidos</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
</resources>