<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.android.electrocarrito.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_gallery_to_product_detail_fragment"
            app:destination="@id/nav_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_product_detail"
        android:name="com.android.electrocarrito.ui.gallery.ProductDetailFragment"
        android:label="@string/menu_product_detail"
        tools:layout="@layout/fragment_product_detail">
        <action
            android:id="@+id/action_productDetailFragment_to_nav_shopping"
            app:destination="@id/nav_shopping" />
    </fragment>

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.android.electrocarrito.ui.shopping.ShoppingFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/fragment_shopping">
        <action
            android:id="@+id/action_nav_shopping_to_nav_checkout"
            app:destination="@id/nav_checkout" />
    </fragment>

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.android.electrocarrito.ui.shopping.CheckoutFragment"
        android:label="@string/menu_checkout"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.android.electrocarrito.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.android.electrocarrito.ui.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>